Update font-size to prevent zoom on iOS

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,10 @@ textarea,
 select {
   font-family: inherit;
 }
+
+@media (max-width: 768px) {
+  input[type="text"],
+  textarea {
+    font-size: 16px !important;
+  }
+}
